<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="250dp"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/textview"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calibrateBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:onClick="calibrateClick"
        android:text="@string/calibrate_your_mic"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recordBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/soundlevelBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="soundlevelClick"
        android:text="@string/measure_sound_level"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recordBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrateBut"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/recordBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="recordClick"
        android:text="@string/record_your_own_file"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/repairBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundlevelBut"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/repairBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="repairClick"
        android:text="@string/repair_your_record"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settingsBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordBut"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/settingsBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="settingsClick"
        android:text="@string/settings"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repairBut"
        app:layout_constraintVertical_bias="0.5" />

</android.support.constraint.ConstraintLayout>